src/configure_files/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: mfonseca
   labels:
     type: ITLRestAPI
