src/configure_files/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: 
  labels: 
    app: 
spec: 
  replicas: 7
  selector:
    matchLabels:
      app: itlapirest
  template:
    metadata:
      labels:
        app: itlapirest
    spec: 
      containers: 
        - name: itlapirest
          image: whomafp/itl-api_rest-php-apache-environment
          ports: 
           - containerPort: 80
        - name: mysql
          image: whomafp/mysql
          ports: 
           - containerPort: 3307
