src/configure_files/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    persistentWith: mysqlsv
    tier: backend
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: "TCP"
  selector:
    persistentWith: mysqlsv
    tier: backend
---
apiVersion: v1
kind: Service
metadata:
  name: apache
  labels:
    environment: dev
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: "TCP"
    targetPort: 80
  selector:
    environment: dev
    tier: frontend
